# hello-travis

./: .travis.yml  CMakeLists.txt  azure-pipelines.yml  main.cpp
.travis/: install-cuda.sh
